# trading-data

./: .gitignore  README.md  TODO.md  pyproject.toml
config/: alpaca_monthly_batches.json  alpaca_symbol_universe.json  etf_context_universe.json  etf_holdings_target_universe.json  etf_proxy_universe.json  etf_sec_series_candidates.json  market_regime_universe.json  nport_sec_api_series_registry.json  underlying_etf_context_candidates.json
context/: README.md
context/etf_holdings/: IVV_nport_candidates.json  QQQ_nport_candidates.json  README.md  _nport_discovery.json  sample_nport_candidate.json
context/etf_holdings/2603/: SPY_2603.md
data/: README.md
data/AAPL/2602/: _meta.json  options_snapshots.jsonl
data/AAPL/2603/: _meta.json  news.jsonl  options_snapshots.jsonl
data/AAPL/2604/: _meta.json  bars_1min.jsonl  bars_1min.meta.json  news.jsonl  options_snapshots.jsonl  options_snapshots.meta.json  quotes.jsonl  quotes.meta.json  trades.jsonl  trades.meta.json
data/BTC-USD/2603/: _meta.json  bars_1min.jsonl  bars_1min.meta.json  quotes.jsonl  quotes.meta.json  trades.jsonl
data/BTC-USD/2604/: _meta.json  trades.jsonl  trades.meta.json
data/QQQ/2603/: _meta.json  options_snapshots.jsonl
data/QQQ/2604/: _meta.json  bars_1min.jsonl  bars_1min.meta.json  news.jsonl  options_snapshots.jsonl  options_snapshots.meta.json  quotes.jsonl  quotes.meta.json  trades.jsonl  trades.meta.json
data/SPY/2603/: _meta.json  options_snapshots.jsonl  options_snapshots.meta.json  quotes.jsonl  trades.jsonl
data/SPY/2604/: _meta.json  bars_1min.jsonl  bars_1min.meta.json  news.jsonl  options_snapshots.jsonl  quotes.jsonl  quotes.meta.json  trades.jsonl  trades.meta.json
data/storage/: README.md
docs/: 00_scope.md  01-overview.md  01_context.md  02-repo-structure-and-storage.md  02-repo-structure.md  02-storage-contracts-and-partitions.md  02_workflow.md  03-context-layer-and-holdings.md  03-data-and-artifacts.md  03-data-contracts-and-partition-policy.md  03-data-policy-and-contracts.md  03-source-priority-and-scope.md  03_acceptance.md  04-context-and-holdings-layer.md  04-context-and-universe.md  04-monthly-partition-storage-policy.md  04-refresh-entrypoints-and-signals.md  04_task.md  05-canonical-data-contract.md  05-current-status-and-open-decisions.md  05-holdings-source-and-refresh.md  05-source-coverage-and-operational-status.md  05_decision.md  06-current-source-coverage.md  06-macro-data.md  06-refresh-and-automation.md  06-source-coverage-and-status.md  06_memory.md  07-automation-and-refresh-strategy.md  07-cross-market-overlap.md  07-market-regime-benchmarks.md  07_data_domains.md  07_data_organization.md  08-underlying-etf-options-context.md  08_data_feed.md  08_data_sources.md  09-future-universe-support.md  09_api_templates.md  10-etf-context-universe.md  10-role-and-boundaries.md  (+18 more)
scripts/: README.md  generate_feature_01_market_regime.py  generate_feature_02_security_selection.py
scripts/data/: update_raw_monthly_data.py
src/: README.md
src/data/alpaca/: README.md  fetch_capabilities.md  fetch_historical_bars.py  fetch_historical_quotes.py  fetch_historical_trades.py  fetch_news.py  fetch_option_snapshots.py  update_current_month.py  update_previous_month_batch.py
src/data/bitget/: README.md
src/data/common/: README.md  audit_output_compaction.py  build_etf_holdings_targets.py  business_time.py  check_nport_availability.py  detect_earliest_complete_month.py  discover_nport_dataset.py  download_nport_metadata.py  explore_etfcom_candidates.py  (+12 more)
src/data_bundles/: README.md  config.py
src/data_feature/: README.md
src/data_feed/: README.md  __init__.py
src/data_source/: README.md  config.py
src/data_sources/: README.md  __init__.py  config.py
src/feed_availability/: README.md  __init__.py  __main__.py  probes.py  registry.py  report.py  sanitize.py
src/feed_interfaces/: README.md  __init__.py  __main__.py  catalog.py  probes.py
src/source_availability/: README.md  __init__.py  __main__.py  report.py
src/source_interfaces/: README.md  __main__.py  catalog.py  probes.py
src/storage/: README.md  __init__.py  sql.py
src/trading_data/: __init__.py
storage/: README.md
storage/templates/: README.md
templates/: README.md
templates/data_kinds/: README.md
tests/: test_market_regime_feature_generator.py  test_security_selection_feature_generator.py
tests/data_bundles/: test_equity_abnormal_activity_pipeline.py  test_model_input_bundles.py  test_numbered_data_bundles.py  test_stock_etf_exposure_pipeline.py
tests/data_feed/: test_alpaca_bars_news_pipeline.py  test_alpaca_liquidity_pipeline.py  test_etf_holdings_pipeline.py  test_gdelt_news_pipeline.py  test_okx_crypto_market_data_pipeline.py  test_sec_company_financials_pipeline.py  test_thetadata_option_event_timeline_pipeline.py  test_thetadata_option_primary_tracking_pipeline.py  test_thetadata_option_selection_snapshot_pipeline.py  test_trading_economics_calendar_web_pipeline.py
tests/data_source/: test_equity_abnormal_activity_pipeline.py  test_numbered_data_sources.py  test_stock_etf_exposure_pipeline.py
tests/data_sources/: test_alpaca_bars_news_pipeline.py  test_alpaca_liquidity_pipeline.py  test_alpaca_quotes_trades_pipeline.py  test_calendar_discovery_pipeline.py  test_equity_abnormal_activity_pipeline.py  test_etf_holdings_pipeline.py  test_gdelt_news_pipeline.py  test_macro_data_pipeline.py  test_numbered_data_sources.py  test_okx_crypto_market_data_pipeline.py  test_sec_company_financials_pipeline.py  test_stock_etf_exposure_pipeline.py  test_thetadata_option_event_timeline_pipeline.py  test_thetadata_option_primary_tracking_pipeline.py  test_thetadata_option_selection_snapshot_pipeline.py  test_trading_economics_calendar_web_pipeline.py
tests/feed_availability/: test_feed_availability.py
tests/feed_interfaces/: test_feed_interfaces.py
tests/source_availability/: test_source_availability.py
tests/source_interfaces/: test_source_interfaces.py
tests/templates/: test_data_kind_preview_generation.py
tmp/: holdings_mapped_sec_api_resolution.json
(+445 files in other folders)
